--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             </div>
         </nav>
         <div class="header__banner">
+            <h1>Cigars</h1>
             <img src="img/header-cigar.png" width="300" alt="Cigar" />
             <div class="header__buttons">
                 <a href="#" class="header__btn-about button">About</a>
@@ -36,10 +37,54 @@
         </div>
     </header>
     <main>
-
+        <section class="about-us">
+            <h2> <span>━</span> About Us</h2>
+            <p class="about-us__big-text">Expertly crafted tours to Norway. <span class="text-highlight">10 days</span>
+                of admiring nordic cities. fjords, and waterfalls.
+            </p>
+            <p class="about-us__text">We offer guided tours in Norway - one of the most beautiful Nordic countries. We
+                will cross the entire country, from Oslo to Tromsø, visit amazing cities, and see stunning nature.
+            </p>
+            <p class="about-us__text">The program is carefully thought out, there are no more than 10 people in each
+                group plus an English-speaking guide. Comfortable vans and nights in 3*+ hotels are included in the
+                price.
+            </p>
+            <div class="about-us__numbers">
+                <div class="about-us__number-card">
+                    <img class="about-us__number-image" width="200" src="img/number-01.png" alt="Number 01">
+                    <h3 class="about-us__h3">Contact us</h3>
+                    <p class="about-us__card-text">Some tour conditions may be changed according to the season. To learn
+                        more about the program,
+                        please contact us.</p>
+                </div>
+                <div class="about-us__number-card">
+                    <img class="about-us__number-image" width="200"  src="img/number-02.png" alt="Number 02">
+                    <h3 class="about-us__h3">Pick a date</h3>
+                    <p class="about-us__card-text">We conduct tours all year round, almost every week, but the most
+                        comfortable weather for sightseeing is in summer.</p>
+                </div>
+                <div class="about-us__number-card">
+                    <img class="about-us__number-image" width="200" src="img/number-03.png" alt="Number 03">
+                    <h3 class="about-us__h3">Start your journey</h3>
+                    <p class="about-us__card-text">If necessary, we help you apply for a visa to Norway, as well as
+                        advise what things you should take with you.</p>
+                </div>
+            </div>
+        </section>
     </main>
-    <footer>
-        
+    <footer class="footer">
+        <div class="footer__contacts">
+            <form action="https://formspree.io/f/YOUR-LINK" method="post">
+                <h2>Let's start a conversation.</h2>
+                <div class="row"></div>
+                <p>RYAN IS LOOKING FORWARD TO HEARING MORE ABOUT YOUR PROJECT AND IDEAS.</p>
+                <input type="text" name="user-name" placeholder="Enter your full name*" required>
+                <input type="tel" name="user-phone" placeholder="Enter your phone number*" required>
+                <input type="date" name="date" required>
+                <textarea name="message" cols="30" rows="10"></textarea>
+                <input type="submit" value="Request a quote">
+            </form>
+        </div>
     </footer>
 </body>
 
